fix(sign-up): fix form height overflow

--- a/src/components/layout/authLayout/authLayout.scss
+++ b/src/components/layout/authLayout/authLayout.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  padding-block: 2rem;
   width: 100%;
   background-color: $primary-black;
 
